--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,17 @@
 .App {
-  text-align: center;
+  text-align: left;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.App-Container {
+  display: flex;
 }
-
-.App-header {
+.App-Sidebar {
   background-color: #222;
-  height: 150px;
+  width: 200px;
   padding: 20px;
   color: white;
 }
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.App-Contents {
+  flex: 1;
+  padding: 20px;
 }
