--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,14 @@
   color: white;
 }
 .App-Contents {
+  position: relative;
   flex: 1;
   padding: 20px;
+}
+
+.App-Notifications {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
 }
